สร้างโดยใช้ Colab

--- a/Explainable_AI_(XAI).ipynb
+++ b/Explainable_AI_(XAI).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1MTG+Km+MNfES5E4rh4R9",
+      "authorship_tag": "ABX9TyPLO/jWhCT8n6sQqm7BLDSw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **Explainable AI (XAI)** Student Performance Prediction"
+        "## **Explainable AI (XAI)** Student Performance Prediction"
       ],
       "metadata": {
         "id": "5P1_P4O6PlM5"
@@ -38,10 +38,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        " คาดการณ์คะแนนสอบของนักเรียนโดยอิงจากนิสัยการเรียนและการเข้าเรียน"
+        "# คาดการณ์คะแนนสอบของนักเรียนโดยอิงจากนิสัยการเรียนและการเข้าเรียน"
       ],
       "metadata": {
         "id": "fxDBN9a04Jzw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Dataset**\n",
+        "https://www.kaggle.com/datasets/amrmaree/student-performance-prediction/data"
+      ],
+      "metadata": {
+        "id": "SHSGkzMwIiNr"
       }
     },
     {
@@ -49,7 +59,6 @@
       "source": [
         "import pandas as pd, numpy as np\n",
         "\n",
-        "# ถ้าโหลดจาก Kaggle/Drive ให้แก้พาธตามจริง\n",
         "path = \"/content/student_performance_dataset.csv\"\n",
         "df = pd.read_csv(path)\n",
         "\n",
@@ -57,7 +66,6 @@
         "df[\"passed\"] = (df[\"Pass_Fail\"].astype(str).str.strip().str.lower()\n",
         "                .map({\"pass\":1, \"fail\":0})).astype(int)\n",
         "\n",
-        "# เลี่ยง leakage: ตัดตัวที่ชี้เป้าโดยตรง\n",
         "drop_cols = [\"Student_ID\", \"Pass_Fail\", \"Final_Exam_Score\"]\n",
         "X = df.drop(columns=[c for c in drop_cols if c in df.columns])\n",
         "y = df[\"passed\"]\n",
@@ -667,7 +675,7 @@
     {
       "cell_type": "code",
       "source": [
-        "i = 0  # เปลี่ยน index ได้\n",
+        "i = 0\n",
         "print(f\"y_true={y_test.iloc[i]}  p_hat={pipe_lr.predict_proba(X_test.iloc[[i]])[0,1]:.3f}\")\n",
         "shap.plots.waterfall(shap_lr[i], max_display=10)\n"
       ],
