สร้างโดยใช้ Colab

--- a/Explainable_AI_(XAI).ipynb
+++ b/Explainable_AI_(XAI).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPLO/jWhCT8n6sQqm7BLDSw",
+      "authorship_tag": "ABX9TyNyLd7f9h0CB5duVH/ewUeg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,7 +76,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 223
+          "height": 224
         },
         "id": "QXTHNQQzHgnx",
         "outputId": "3096ddc2-e70d-4e31-8655-1e8d68720897"
@@ -498,7 +498,7 @@
         "\n",
         "models = {}\n",
         "\n",
-        "# Logistic Regression (อธิบายง่าย)\n",
+        "# Logistic Regression\n",
         "lr = Pipeline(steps=[\n",
         "    (\"prep\", preprocess),\n",
         "    (\"clf\", LogisticRegression(max_iter=1000, class_weight=\"balanced\"))\n",
