สร้างโดยใช้ Colab

--- a/Explainable_AI_(XAI).ipynb
+++ b/Explainable_AI_(XAI).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPE6cygK84KX8/R/M0QXOpV",
+      "authorship_tag": "ABX9TyMuPrm8BbaaRwY8Wgvfg12O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,29 +29,46 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## **Explainable AI (XAI)** Student Performance Prediction"
+        "## **Explainable AI (XAI): Student Performance Prediction**\n",
+        "\n",
+        "**โจทย์:** โปรเจกต์นี้มีเป้าหมายเพื่อสร้างโมเดล Machine Learning สำหรับ **คาดการณ์ผลการสอบปลายภาค (สอบผ่าน/สอบตก) ของนักเรียน** โดยพิจารณาจากปัจจัยต่างๆ เช่น ลักษณะทางประชากร, นิสัยการเรียน, และผลการเรียนในอดีต นอกจากนี้ เราจะใช้เทคนิค Explainable AI (XAI) เพื่อทำความเข้าใจว่าโมเดลใช้ปัจจัยใดในการตัดสินใจ และปัจจัยเหล่านั้นส่งผลต่อการทำนายอย่างไร\n",
+        "\n",
+        "**ชุดข้อมูล (Dataset):** ใช้ชุดข้อมูล [Student Performance Prediction](https://www.kaggle.com/datasets/amrmaree/student-performance-prediction/data) จาก Kaggle ซึ่งประกอบด้วยข้อมูลนักเรียนจำนวน 708 คน และมี features ดังนี้:\n",
+        "* `Gender`: เพศ\n",
+        "* `Study_Hours_per_Week`: จำนวนชั่วโมงที่อ่านหนังสือต่อสัปดาห์\n",
+        "* `Attendance_Rate`: อัตราการเข้าเรียน (%)\n",
+        "* `Past_Exam_Scores`: คะแนนสอบครั้งก่อน\n",
+        "* `Parental_Education_Level`: ระดับการศึกษาของผู้ปกครอง\n",
+        "* `Internet_Access_at_Home`: การเข้าถึงอินเทอร์เน็ตที่บ้าน (Yes/No)\n",
+        "* `Extracurricular_Activities`: การเข้าร่วมกิจกรรมนอกหลักสูตร (Yes/No)\n",
+        "\n",
+        "**ตัวแปรเป้าหมาย (Target Variable):** เราได้สร้างตัวแปร `passed` ขึ้นมา โดยกำหนดให้:\n",
+        "* `1`: นักเรียนสอบผ่าน (Pass)\n",
+        "* `0`: นักเรียนสอบตก (Fail)\n",
+        "(สร้างจากคอลัมน์ `Pass_Fail` เดิม)"
       ],
       "metadata": {
-        "id": "5P1_P4O6PlM5"
+        "id": "MQ6pEKjHdljz"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "คาดการณ์คะแนนสอบของนักเรียนโดยอิงจากนิสัยการเรียนและการเข้าเรียน"
+        "### **1. การเตรียมข้อมูล (Data Preparation)**\n",
+        "\n",
+        "ในขั้นตอนนี้ เราจะเตรียมข้อมูลให้อยู่ในรูปแบบที่พร้อมสำหรับนำไปสร้างโมเดล\n",
+        "\n",
+        "**การเลือก Features:**\n",
+        "* เราได้ทำการลบคอลัมน์ที่ไม่จำเป็นออก ได้แก่:\n",
+        "    * `Student_ID`: เป็นเพียง ID ไม่มีความหมายต่อการทำนาย\n",
+        "    * `Pass_Fail`: ถูกแปลงเป็นตัวแปรเป้าหมาย `passed` แล้ว\n",
+        "    * `Final_Exam_Score`: เป็นผลลัพธ์โดยตรง ซึ่งหากนำมาใช้จะเป็นการรั่วไหลของข้อมูล (Data Leakage) ทำให้โมเดลรู้คำตอบล่วงหน้า\n",
+        "\n",
+        "**การแบ่งข้อมูล Train/Test:**\n",
+        "* เราแบ่งข้อมูลออกเป็นชุด Train (75%) และชุด Test (25%) โดยใช้ `StratifiedShuffleSplit` เพื่อให้แน่ใจว่าสัดส่วนของนักเรียนที่สอบผ่านและสอบตกในทั้งสองชุดข้อมูลยังคงเท่าเดิม ซึ่งสำคัญมากสำหรับการประเมินผลโมเดลที่ไม่ลำเอียง"
       ],
       "metadata": {
-        "id": "fxDBN9a04Jzw"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "**Dataset**\n",
-        "https://www.kaggle.com/datasets/amrmaree/student-performance-prediction/data"
-      ],
-      "metadata": {
-        "id": "SHSGkzMwIiNr"
+        "id": "GgDL5mAXdyj9"
       }
     },
     {
@@ -81,7 +98,7 @@
         "id": "QXTHNQQzHgnx",
         "outputId": "3096ddc2-e70d-4e31-8655-1e8d68720897"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -462,7 +479,7 @@
         "id": "anT5SQPvHjTQ",
         "outputId": "88b644ff-74d2-4b79-db43-7de42e80ad24"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -473,6 +490,27 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **2. การสร้างและประเมินผลโมเดล (Model Building & Evaluation)**\n",
+        "\n",
+        "**Pipeline การสร้าง Model:**\n",
+        "เราสร้าง Pipeline สำหรับการประมวลผลข้อมูลและการเทรนโมเดล ซึ่งประกอบด้วย:\n",
+        "1.  **Preprocessing:** ใช้ `ColumnTransformer` เพื่อจัดการกับ features ประเภทต่างๆ:\n",
+        "    * **Numerical Features:** (`Study_Hours_per_Week`, `Attendance_Rate`, `Past_Exam_Scores`) ทำการ Scale ด้วย `StandardScaler` (แบบไม่ลบ mean เพื่อให้ SHAP ทำงานได้ง่ายขึ้นกับ Linear models)\n",
+        "    * **Categorical Features:** (`Gender`, `Parental_Education_Level`, `Internet_Access_at_Home`, `Extracurricular_Activities`) ทำการแปลงเป็น One-Hot Encoding ด้วย `OneHotEncoder` (ตั้ง `handle_unknown='ignore'` เพื่อรองรับค่าที่ไม่เคยเจอใน test set)\n",
+        "2.  **Classifier:** เลือกใช้โมเดล 2 แบบเพื่อเปรียบเทียบ:\n",
+        "    * **Logistic Regression:** เป็นโมเดลเชิงเส้นที่ตีความได้ง่าย เหมาะสำหรับเป็น Baseline และใช้กับ SHAP LinearExplainer ได้ดี (ตั้ง `class_weight='balanced'` เพื่อจัดการกับข้อมูลที่อาจไม่สมดุล)\n",
+        "    * **Decision Tree:** เป็นโมเดลแบบ Tree-based ที่อาจจับความสัมพันธ์ที่ซับซ้อนขึ้นได้ (ตั้ง `max_depth=5` เพื่อป้องกัน Overfitting และ `class_weight='balanced'`)\n",
+        "\n",
+        "**ผลการประเมิน:**\n",
+        "เราประเมินผลโมเดลทั้งสองบนชุดข้อมูล Test โดยใช้ Classification Report และ ROC-AUC Score"
+      ],
+      "metadata": {
+        "id": "7a_FdqaGd6PU"
+      }
     },
     {
       "cell_type": "code",
@@ -522,7 +560,7 @@
         "id": "9BAuCoCjHkxh",
         "outputId": "ef5d4d3c-f4a2-4d0e-96df-d1cc5cb9489d"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,7 +596,7 @@
         "id": "klnShbVBHm8S",
         "outputId": "54dd421f-2cc5-41ed-9d18-01207ea2ceac"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,6 +629,37 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**ข้อสังเกต:** ผลการประเมินแสดงให้เห็นว่า **ทั้งโมเดล Logistic Regression และ Decision Tree สามารถทำนายผลการสอบผ่าน/ตกได้อย่างสมบูรณ์แบบ (Accuracy, Precision, Recall, F1-score = 1.0 และ ROC-AUC = 1.0)** บนชุดข้อมูลทดสอบ\n",
+        "\n",
+        "ซึ่งอาจเกิดขึ้นได้จากหลายสาเหตุ เช่น:\n",
+        "* ชุดข้อมูลมีรูปแบบที่ชัดเจนมาก ทำให้โมเดลสามารถแยกแยะสองกลุ่มได้อย่างสมบูรณ์\n",
+        "* อาจมีปัญหา Data Leakage ที่เรายังไม่พบ (แม้ว่าจะลบ `Final_Exam_Score` ไปแล้ว)\n",
+        "* ขนาดของ Test set อาจเล็กเกินไป (177 ตัวอย่าง)\n",
+        "\n",
+        "ถึงแม้ผลลัพธ์จะสมบูรณ์แบบ การใช้ XAI ก็ยังคงมีประโยชน์เพื่อทำความเข้าใจว่าปัจจัยใดที่โมเดลใช้ในการตัดสินใจที่แม่นยำเช่นนี้"
+      ],
+      "metadata": {
+        "id": "8WHrAJrUeWLg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **3. การอธิบายโมเดลด้วย XAI (Explainable AI)**\n",
+        "\n",
+        "เพื่อให้เข้าใจว่าโมเดล Logistic Regression (ซึ่งทำนายได้สมบูรณ์แบบ) ใช้ปัจจัยใดในการตัดสินใจ เราจะใช้เทคนิค **SHAP (SHapley Additive exPlanations)** ซึ่งเป็นวิธีการที่ได้รับความนิยมในการอธิบายผลการทำนายของโมเดล Machine Learning\n",
+        "\n",
+        "เราจะดูคำอธิบาย 2 ระดับ:\n",
+        "1.  **Global Explanations:** ปัจจัยใดที่ส่งผลต่อการทำนาย *โดยรวม* ของโมเดล\n",
+        "2.  **Local Explanations:** ปัจจัยใดที่ส่งผลต่อการทำนาย *สำหรับนักเรียนแต่ละคน*"
+      ],
+      "metadata": {
+        "id": "GvD9rXn0eG1y"
+      }
     },
     {
       "cell_type": "code",
@@ -634,7 +703,7 @@
         "id": "fueI48ejHopq",
         "outputId": "c91a2b99-1dd4-4bcb-edc1-628775ab2c87"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -647,6 +716,24 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **3.1 Global Explanations (คำอธิบายภาพรวม)**\n",
+        "\n",
+        "กราฟ SHAP Summary (Beeswarm Plot) ด้านบนแสดงให้เห็นถึงความสำคัญและทิศทางของแต่ละ feature ที่มีต่อการทำนายผลสอบ (**ค่า SHAP value เป็นบวก** หมายถึง **สนับสนุน** การทำนายว่า **สอบผ่าน (passed=1)**, **ค่า SHAP value เป็นลบ** หมายถึง **สนับสนุน** การทำนายว่า **สอบตก (passed=0)**)\n",
+        "\n",
+        "จากกราฟ สรุปได้ว่า:\n",
+        "1.  **`num__Past_Exam_Scores` (คะแนนสอบครั้งก่อน):** เป็น feature ที่มีอิทธิพล **มากที่สุด** คะแนนที่สูง (สีแดง) จะผลักดันให้โมเดลทำนายว่าสอบผ่าน (SHAP > 0) อย่างชัดเจน ส่วนคะแนนที่ต่ำ (สีน้ำเงิน) จะผลักดันให้ทำนายว่าสอบตก (SHAP < 0)\n",
+        "2.  **`num__Attendance_Rate` (อัตราการเข้าเรียน):** มีความสำคัญรองลงมา อัตราการเข้าเรียนที่สูง (สีแดง) สนับสนุนการทำนายว่าสอบผ่าน\n",
+        "3.  **`num__Study_Hours_per_Week` (จำนวนชั่วโมงอ่านหนังสือ):** จำนวนชั่วโมงที่สูง (สีแดง) สนับสนุนการทำนายว่าสอบผ่านเช่นกัน\n",
+        "\n",
+        "ส่วน features อื่นๆ เช่น `Parental_Education_Level`, `Gender`, `Internet_Access_at_Home`, `Extracurricular_Activities` มีผลต่อการทำนายโดยรวมน้อยกว่ามาก"
+      ],
+      "metadata": {
+        "id": "BlT8dXAlebxx"
+      }
     },
     {
       "cell_type": "code",
@@ -663,7 +750,7 @@
         "id": "xE8oVehyHrm5",
         "outputId": "14389991-b130-4f29-9ffd-b58991bdf2c0"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -683,6 +770,62 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### **3.2 Local Explanations (คำอธิบายรายบุคคล)**\n",
+        "\n",
+        "กราฟ SHAP Waterfall Plot ด้านบนแสดงการตัดสินใจของโมเดลสำหรับ **นักเรียนคนแรก (index 0)** ในชุดข้อมูล Test\n",
+        "\n",
+        "* **ผลลัพธ์จริง:** นักเรียนคนนี้ **สอบตก** (`y_true=0`)\n",
+        "* **ผลการทำนาย:** โมเดลทำนายว่ามีโอกาสสอบผ่านต่ำมาก (`p_hat=0.003`) ซึ่งสอดคล้องกับผลจริง\n",
+        "* **คำอธิบาย:**\n",
+        "    * ค่า `E[f(x)]` (ประมาณ 0.003) คือ ค่าเฉลี่ยของ output ของโมเดล (โอกาสสอบผ่าน) บนชุดข้อมูล background\n",
+        "    * ลูกศรสีแดง (ค่า SHAP เป็นบวก) คือ ปัจจัยที่ **เพิ่ม** โอกาสสอบผ่าน\n",
+        "    * ลูกศรสีน้ำเงิน (ค่า SHAP เป็นลบ) คือ ปัจจัยที่ **ลด** โอกาสสอบผ่าน\n",
+        "    * จะเห็นว่าปัจจัยที่ **ลด** โอกาสสอบผ่านมากที่สุดสำหรับนักเรียนคนนี้คือ:\n",
+        "        * `num__Past_Exam_Scores = 60.1`: คะแนนสอบครั้งก่อนที่ค่อนข้างต่ำ\n",
+        "        * `num__Study_Hours_per_Week = 6.28`: จำนวนชั่วโมงอ่านหนังสือที่น้อย\n",
+        "        * `cat__Extracurricular_Activities_No = 0.963`: การไม่เข้าร่วมกิจกรรมนอกหลักสูตร\n",
+        "    * ส่วน `num__Attendance_Rate = 97.4` ที่สูง กลับมีผลเพิ่มโอกาสสอบผ่านเล็กน้อย แต่ถูกหักล้างด้วยปัจจัยลบอื่นๆ\n",
+        "    * ผลรวมของ SHAP values บวกกับ base value จะได้ `f(x)` (ประมาณ -5.738) ซึ่งเป็น log-odds ที่ต่ำมาก สอดคล้องกับความน่าจะเป็น `p_hat` ที่ต่ำ"
+      ],
+      "metadata": {
+        "id": "80ND1DW0ejTK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **4. สรุปผลและสิ่งที่ได้เรียนรู้ (Conclusion)**\n",
+        "\n",
+        "#### **4.1 สรุปผลลัพธ์หลัก (Key Findings)**\n",
+        "\n",
+        "* โมเดล Logistic Regression (และ Decision Tree) สามารถ **ทำนายผลการสอบปลายภาค (ผ่าน/ตก) ได้อย่างแม่นยำ 100%** บนชุดข้อมูลทดสอบ ซึ่งบ่งชี้ว่าข้อมูลชุดนี้มีรูปแบบที่ชัดเจนมาก\n",
+        "* จากการวิเคราะห์ด้วย SHAP พบว่า **ปัจจัยที่มีอิทธิพลต่อการทำนายมากที่สุด 3 อันดับแรก** ได้แก่:\n",
+        "    1.  **คะแนนสอบครั้งก่อน (`Past_Exam_Scores`)**: สูง -> ผ่าน, ต่ำ -> ตก\n",
+        "    2.  **อัตราการเข้าเรียน (`Attendance_Rate`)**: สูง -> ผ่าน\n",
+        "    3.  **จำนวนชั่วโมงอ่านหนังสือต่อสัปดาห์ (`Study_Hours_per_Week`)**: สูง -> ผ่าน\n",
+        "* ปัจจัยอื่นๆ เช่น เพศ, ระดับการศึกษาผู้ปกครอง, การมีอินเทอร์เน็ต, หรือการทำกิจกรรมนอกหลักสูตร มีผลต่อการทำนายโดยรวมน้อยกว่าอย่างมีนัยสำคัญในชุดข้อมูลนี้\n",
+        "\n",
+        "#### **4.2 สิ่งที่ได้เรียนรู้ / ข้อเสนอแนะ (Key Learnings / Actionable Insights)**\n",
+        "\n",
+        "* **XAI ยืนยันความสำคัญของปัจจัยพื้นฐาน:** ผลการเรียนในอดีต (Past Scores) และความสม่ำเสมอในการเข้าเรียน (Attendance) เป็นตัวบ่งชี้ที่แข็งแกร่งที่สุดสำหรับผลการเรียนในอนาคต ซึ่งสอดคล้องกับความเข้าใจทั่วไป\n",
+        "* **ศักยภาพในการระบุกลุ่มเสี่ยง:** โมเดลและคำอธิบายจาก SHAP (โดยเฉพาะ Local Explanations) สามารถนำไปใช้เพื่อ **ระบุตัวนักเรียนที่มีแนวโน้มจะสอบตกได้ตั้งแต่เนิ่นๆ** โดยดูจากค่า Past Scores, Attendance Rate, และ Study Hours ที่ต่ำ สถาบันการศึกษาสามารถใช้ข้อมูลเชิงลึกนี้ในการให้ความช่วยเหลือหรือจัดโปรแกรมสนับสนุนที่ตรงเป้าหมายมากขึ้น\n",
+        "* **ความสมบูรณ์แบบของโมเดล:** การที่โมเดลได้ผลลัพธ์ 100% ควรพิจารณาด้วยความระมัดระวัง อาจต้องมีการตรวจสอบคุณภาพและความสมจริงของข้อมูลเพิ่มเติม หรือทดสอบกับชุดข้อมูลอื่นที่ซับซ้อนกว่านี้\n",
+        "\n",
+        "#### **4.3 ข้อจำกัดและงานในอนาคต (Limitations & Future Work)**\n",
+        "\n",
+        "* **ผลลัพธ์สมบูรณ์แบบเกินไป:** อาจต้องตรวจสอบ Data Leakage หรือความเรียบง่ายของชุดข้อมูลเพิ่มเติม\n",
+        "* **ขนาดข้อมูล:** ชุดข้อมูลมีขนาดค่อนข้างเล็ก (708 records) การทดลองกับข้อมูลที่ใหญ่ขึ้นและหลากหลายขึ้นอาจให้ผลที่แตกต่าง\n",
+        "* **เทคนิค XAI เพิ่มเติม:** เนื่องจากโมเดลได้ผลลัพธ์ที่ชัดเจน จึงยังไม่ได้ลองใช้ LIME หรือ Counterfactuals ซึ่งอาจให้มุมมองที่ต่างออกไปหากใช้กับโมเดลที่ซับซ้อนกว่านี้\n",
+        "* **Fairness:** ยังไม่ได้ทำการตรวจสอบความเป็นธรรม (Fairness) ของโมเดล เช่น โมเดลมี bias ต่อเพศใดเพศหนึ่งหรือไม่ ซึ่งควรทำในงานวิจัยต่อไป\n",
+        "* **โมเดลอื่น:** ควรลองใช้โมเดลที่ซับซ้อนขึ้น (เช่น Gradient Boosting, Neural Networks) และเปรียบเทียบประสิทธิภาพ รวมถึงคำอธิบายจาก XAI ที่ได้"
+      ],
+      "metadata": {
+        "id": "WGo7wFTZepYz"
+      }
     }
   ]
 }
